
###############################################################################
################################### PROJECT ###################################
###############################################################################

cmake_minimum_required(VERSION 3.11)

project(HEX)

###############################################################################
#################################### SETUP ####################################
###############################################################################

option(STUFF_TESTING "enable targets to compile the stuff testing file" OFF)

find_package(SDL2 REQUIRED)


###############################################################################
############################ IMPLEMENTATION/BUILD #############################
###############################################################################


add_subdirectory(src)


###############################################################################
################################### CONFIG ####################################
###############################################################################


###############################################################################
############################## INSTALL/PACKAGING ##############################
###############################################################################


###############################################################################
############################### INSTALL/CONFIG ################################
###############################################################################
