
###############################################################################
#################################### SETUP ####################################
###############################################################################

set(BENCHMARK_APP benchmark)

set(SOURCES
    mainBenchmark.cpp
    CSVwriter.cpp
)

set(HEADERS
    VoidUI.hpp
    CSVwriter.hpp
)


###############################################################################
#################################### MAIN #####################################
############################ IMPLEMENTATION/BUILD #############################
###############################################################################


add_executable(${BENCHMARK_APP} ${SOURCES} ${HEADERS})

target_link_libraries(${BENCHMARK_APP} PUBLIC
	HexGameLib
)

target_include_directories(${BENCHMARK_APP} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)

###############################################################################
#################################### MAIN #####################################
############################## INSTALL/PACKAGING ##############################
###############################################################################

install(TARGETS ${BENCHMARK_APP} DESTINATION "${CMAKE_INSTALL_PREFIX}/bin")
