
###############################################################################
#################################### SETUP ####################################
###############################################################################

set(CONS_APP mainCons)

set(SOURCES
    MainHexCons.cpp
    ConsoleUI.cpp
)

set(HEADERS
    ConsoleUI.hpp
)


###############################################################################
#################################### MAIN #####################################
############################ IMPLEMENTATION/BUILD #############################
###############################################################################


add_executable(${CONS_APP} ${SOURCES} ${HEADERS})

target_link_libraries(${CONS_APP} PUBLIC
	HexGameLib
    #ncurses ?
)

target_include_directories(${CONS_APP} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)

###############################################################################
#################################### MAIN #####################################
############################## INSTALL/PACKAGING ##############################
###############################################################################

install(TARGETS ${CONS_APP} DESTINATION "${CMAKE_INSTALL_PREFIX}/bin")


###############################################################################
#################################### TEST #####################################
############################ IMPLEMENTATION/BUILD #############################
###############################################################################


###############################################################################
#################################### TEST #####################################
############################## INSTALL/PACKAGING ##############################
###############################################################################

